irregular inf special project, ita GFX

--- a/localisation/english/ic_focus_l_english.yml
+++ b/localisation/english/ic_focus_l_english.yml
@@ -375,9 +375,33 @@ ic_USA_neutrality_act:0 "Neutrality act"
 
 
 ITA_initial_focus:0 "Forza Italia! Forza Duce!"
-
-
+ITA_huge_agrarian_sector:0 "Huge Agrarian Sector"
+ITA_slow_industrialization:0 "Slow Industrialization"
 ITA_build_up_colonies:0 "Build up Colonies"
 ITA_build_up_colonies_tt:0 "After losing "§Y$ic_ITA_building_up_colonies$§!" idea you will recieve "§Y$ic_ITA_building_up_colonies_bonus$§!" idea for §Y545§! days."
+ITA_build_up_libya:0 "Build up Libya"
+ITA_build_up_ethiopia:0 "Build up Ethiopia"
+ITA_search_for_more_oil:0 "Search for more Oil"
+ITA_edison_electricity:0 "Edison Electricity"
+ITA_alfa_romeo_deal:0 "Alfa Romeo Deal"
+ITA_yacheika:0 "Research Slot"
+ITA_another_tax_reform:0 "Another Tax Reform"
+ITA_continue_building_fascist_state:0 "Continue Building Fascist State"
+ITA_oppose_anschluss:0 "Opposse Anschluss"
+ITA_idea_of_romans:0 "Idea of Romans"
+ITA_albania_occupation:0 "Albania Occupation"
+ITA_reorganize_retards:0 "Reorganize Retards"
+ITA_army:0 "Army"
+ITA_l6_project:0 "L6 Project"
+ITA_get_rid_of_ww1_legacy:0 "Get Rid of WW1 Legacy"
+ITA_fighting_xp_eth:0 "Ethiopia experience"
+ITA_fighting_xp_spr:0 "Spain experience"
+ITA_poor_mechanized_army:0 "Poor Mechanized Army"
+ITA_air:0 "Air"
+ITA_scrap_long_going_bombers:0 "Scrap long-going Bombers"
+ITA_navy:0 "Navy"
+ITA_end_reffiting_conte_di_cavour:0 "End reffiting Conte di Cavour"
+ITA_proper_escorts:0 "Proper Escortss"
+ITA_think_of_littorio:0 "Think of Littorio"
 
 ITA_reorganize_retards_tt:0 "§CWill start a chain of Military Reorganization of 6 debuffs, each of which will be removing one after another every 180 days (in total will take 1080 days = 3 years)§"
