--- a/localisation/english/ic_focus_l_english.yml
+++ b/localisation/english/ic_focus_l_english.yml
@@ -208,6 +208,7 @@ ENG_english_infantrymen:0 "English Infantrymen"
 ENG_fortification:0 "Empire Fortification"
 ENG_french_military_cooperation:0 "French Military Cooperation"
 ENG_general_command_staff:0 "General Command Staff"
+ENG_reinforce_expeditionary_force:0 "Reinforce Expeditionary Force"
 ENG_research_slot_focus:0 "Research Slot"
 ENG_research_buff_focus:0 "Beat their "Wunderwaffe""
 ENG_raf:0 "RAF"
@@ -216,9 +217,19 @@ ENG_announce_competition_for_modern_figher:0 "Announce Competition for Modern Fi
 ENG_joint_air_exercises:0 "Joint Air Exercises"
 ENG_indiscriminate_bombing_policy:0 "Indiscriminate Bombing Policy"
 ENG_our_second_key_to_survive:0 "Our Second Key to Survive"
+ENG_no_peace_for_our_time:0 "No Peace for Our Time"
+ENG_enforce_destroyers_fleet:0 "Enforce Escort Fleets"
+ENG_enhanced_naval_patrols:0 "Enhanced Naval Patrols"
+ENG_keeping_an_eye_on_sea:0 "Keeping an Eye on Sea"
+ENG_humble_gray_wolf:0 "Humble Gray Wolf"
+ENG_humble_gray_wolf_tt_trigger:0 "Requires to have x2 §Yscreen ships§! to §Ygerman submarines§! count.\n - §gGerman submarines count:§! [?GER.num_ships_with_type@submarine|0R] ([?ger_subs_count|0R] - x2) \n - §CEnglish screen ships count:§! [?ENG.num_ships_with_type@screen|0R]\n\n"
+ENG_prepare_for_blockade:0 "Prepare for Aerial Blockade"
+ENG_home_defence_measures:0 "Home Defence Measures"
+ENG_isle_protected:0 "Isle status: Protected!"
+ENG_rebuild_after_scavengers:0 "Rebuild after Scavengers!"
+ENG_our_turn_now:0 "Give as Good as One Gets"
+ic_ENG_motion_of_no_confidence:0 "Motion of No Confidence"
 
-
-ENG_counter_german_subs_tt_trigger:0 "Requires to have x2 §Yscreen ships§! to §Ygerman submarines§! count.\n - §gGerman submarines count:§! [?GER.num_ships_with_type@submarine|0R] ([?ger_subs_count|0R] - x2) \n - §CEnglish screen ships count:§! [?ENG.num_ships_with_type@screen|0R]\n\n"
 
 
 ic_ROM_Election_of_the_King:0 "Election of the King"
