ita_learn_from_germans focus filled, one new trait, moved researching special forces to special projects

--- a/localisation/english/ic_traits_l_english.yml
+++ b/localisation/english/ic_traits_l_english.yml
@@ -19,3 +19,4 @@
  minister_of_proparanda:0 "Minister of propaganda"
  fuhrers_fireman:0 "Fuhrers Fireman"
  speer_trait:0 "Mils Reorganizer"
+ cas_reduction_trait:0 "Concealment Expert"
