--- a/localisation/english/ic_focus_l_english.yml
+++ b/localisation/english/ic_focus_l_english.yml
@@ -247,7 +247,7 @@ ic_ROM_Revenge_for_Bessarabia:0 "Revenge for Bessarabia"
 ic_ROM_German_inancing:0 "German financing"
 ic_ROM_German_officer_corps:0 "German officer corps"
 ic_ROM_the_transition_to_military_rails:0 "The transition to military rails"
-ic_ROM_the_transition_to_military_rails_tt:0 "§YRomanias Minister of Military Economy takes over the entire industry§"
+ic_ROM_the_transition_to_military_rails_tt:0 "§YRomanias Minister of Military Economy takes over the entire industry§!"
 ic_ROM_More_more_oil:0 "More more oil!"
 ic_ROM_The_Black_Sea_-_Romania:0 "Black Sea-Romania"
 ic_ROM_Modern_support_compaines:0 "Modern support compaines"
@@ -272,7 +272,7 @@ ic_ROM_support_in_the_Kerch:0 "Support in the Kerch"
 ic_ROM_invasion_in_the_Kavkazzz:0 "Invasion in the Kavkaz"
 ic_ROM_Dockyard_in_Constanta:0 "Dockyard in Constanta"
 ic_ROM_visit_Denitz_in_Romania:0 "Visit Denitz in Romania"
-ic_ROM_visit_Denitz_in_Romania_tt:0 "§YDoenitz is paying a visit to Romania and you're getting him as a naval advisor§"
+ic_ROM_visit_Denitz_in_Romania_tt:0 "§YDoenitz is paying a visit to Romania and you're getting him as a naval advisor§!"
 ic_ROM_plan_Bismark:0 "Plan Bismark"
 ic_ROM_destroyers:0 "Destroyers"
 ic_ROM_germans_Uboat:0 "Germans Uboat"
@@ -283,11 +283,11 @@ ic_ROM_declare_war_in_YUG:0 "Declare war in Yugoslavia"
 ic_ROM_declare_war_in_GRE:0 "Declare war in Greece"
 ic_ROM_old_friends:0 "Old friends"
 ic_ROM_italian_ammunication:0 "Italian ammunication"
-ic_ROM_italian_ammunication_tt:0 "§YIf Italy has researched GUN II, Romania will recieve significant stockpile reinforcements§"
+ic_ROM_italian_ammunication_tt:0 "§YIf Italy has researched GUN II, Romania will recieve significant stockpile reinforcements§!"
 ic_ROM_Support_for_German_policy:0 "Support for German policy"
 ic_ROM_Not_Support_for_German_policy:0 "Not Support for German policy"
 ic_ROM_open_focus_romania:0 "Open focus romania"
-ic_ROM_open_focus_romania_tt:0 "§YOpens tricks for declaring war on Yugoslavia and Greece§"
+ic_ROM_open_focus_romania_tt:0 "§YOpens tricks for declaring war on Yugoslavia and Greece§!"
 ic_ROM_Industrialization:0 "Industrialization"
 ic_ROM_light_industry:0 "Light industry"
 ic_ROM_light_industry2:0 "New plants in Moldova"
