fixed abuse for barb declaring

--- a/localisation/english/ic_triggers_l_english.yml
+++ b/localisation/english/ic_triggers_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
-  ic_ger_spy_planes_caught_tt:0 "§YGERMAN SPY PLANES DETECTED§!\n "
+  ic_ger_spy_planes_caught_tt:0 "§YGERMAN SPY PLANES DETECTED§! "
   ic_ger_spy_planes_caught_tt_NOT:0 "§YGERMAN SPY ARE NOT PLANES DETECTED§!"
 
   ic_ger_has_completed_all_six_waves_of_industry_evac_tt:0 "§YHAS COMPLETED ALL 6 WAVES OF FRANCE INDUSTRY EVAC§!\n "
