offencive buffs, slight decisions adjustiments

--- a/localisation/english/ic_decisions_l_english.yml
+++ b/localisation/english/ic_decisions_l_english.yml
@@ -32,7 +32,7 @@
 
 
   SOV_great_patriotic_war_category:0 "§RGREAT PATRIOTIC WAR§!"
-  SOV_great_patriotic_war_category_desc:0 "_"
+  SOV_great_patriotic_war_category_desc:0 " "
 
   SOV_forts_category:0 "§HSOVIET FORTS§!"
   SOV_forts_category_desc:0 "§gSoviet forts saved The Red Army many times throughout the war:\n§HKrasnaya Gorka near Leningrad§ §g was never captured by Germans outlining the front line with the range of its guns;\n§HMojayskaya Defencive Line§ §g stopped German panzers advance towards §HMoscow§ §g during fall 1941;\n§HFort Maxim Gorky§ §g was the last one on german way to §HSevastopol§, §g not letting them pass through until the last piece of ammo run out, but even after that did not surrender and shot first waves of SS with powder gases.\nHowever Soviets werent able to build proper fort lines across the whole frontline.§!"
