added soviet defencive turrets

--- a/localisation/english/ic_equipment_l_english.yml
+++ b/localisation/english/ic_equipment_l_english.yml
@@ -1,4 +1,9 @@
 ﻿l_english:
+
+ railway_gun_equipment_stationary_battery_1:0 "Statinary Fort Battery"
+
+
+
  SOV_heavy_tank_equipment_3:0 "IS-2"
  SOV_heavy_tank_equipment_3_short:0 "IS-2"
  SOV_heavy_tank_equipment_3_desc:0 "Iosif Stalin (Joseph Stalin) - soviet answer to new german heavy tanks, such as King Tiger. 122mm canon and almost impenetrable armor made IS-2 tank of victory just as T-34/85"
