pisdez ya namodil

--- a/localisation/english/ic_characters_l_english.yml
+++ b/localisation/english/ic_characters_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+ic_SOV_mihail_katukov:0 "Mihail Katukov"
 ic_SOV_dmitry_pavlov:0 "Dmitry Pavlov"
 ic_SOV_yuri_levitan:0 "Yuri Levitan"
 ic_SOV_ivan_larionov:0 "Ivan Larionov"
