ger focus changes, barb balance

--- a/localisation/english/ic_focus_l_english.yml
+++ b/localisation/english/ic_focus_l_english.yml
@@ -176,7 +176,9 @@ GER_change_direction:0 "Change Direction"
 GER_drang_nach_osten:0 "Drang Nach Osten"
 GER_plan_ost:0 "General-Plan "OST""
 GER_blitzkrieg_stalls:0 "Blitzkrieg Stalls"
-GER_oops_forgor_winter_equip:0 "Oops Forgor Winter Equip"
+GER_medal_for_barb:0 ""Winterschalcht im Osten 1941/42" Medal"
+GER_medal_for_moscau:0 ""For Taking Moscau" Medal"
+GER_medal_for_stalingrad:0 ""Schlacht an Wolga" Medal"
 GER_barbarossa_first_succeses:0 "Barbarossa First Succeses"
 GER_barbarossa_moderate_succeses:0 "Barbarossa Moderate Succeses"
 GER_barbarossa_big_succeses:0 "Barbarossa Big Succeses"
