--- a/localisation/english/ic_ideas_l_english.yml
+++ b/localisation/english/ic_ideas_l_english.yml
@@ -60,7 +60,8 @@
  ic_ger_barbarossa:0 "Operation: Barbarossa"
  ic_ger_barb_stall_1:0 "Blitzkrieg stalls!"
  ic_ger_barb_stall_2:0 "Blitzkrieg stalls!"
- ic_ger_barb_stall_3:0 "Blitzkrieg stalls: 1942 Summer Offencive Failed"
+ ic_ger_barb_stall_3:0 "Blitzkrieg stalls!"
+ #ic_ger_barb_stall_3:0 "Blitzkrieg stalls: 1942 Summer Offencive Failed"
 
 
 
