fixed naval zones, english anti-raid focus(should add/fix tooltip as its retarded), eng ideas

--- a/localisation/english/ic_focus_l_english.yml
+++ b/localisation/english/ic_focus_l_english.yml
@@ -228,7 +228,7 @@ ENG_enforce_destroyers_fleet:0 "Enforce Escort Fleets"
 ENG_enhanced_naval_patrols:0 "Enhanced Naval Patrols"
 ENG_keeping_an_eye_on_sea:0 "Keeping an Eye on Sea"
 ENG_humble_gray_wolf:0 "Humble Gray Wolf"
-ENG_humble_gray_wolf_tt_trigger:0 "Requires to have x2 §Yscreen ships§! to §Ygerman submarines§! count.\n - §gGerman submarines count:§! [?GER.num_ships_with_type@submarine|0R] ([?ger_subs_count|0R] - x2) \n - §CEnglish screen ships count:§! [?ENG.num_ships_with_type@screen|0R]\n\n"
+ENG_humble_gray_wolf_tt_trigger:0 "\n    England has x1.5 §Yscreen ships§! to §Ygerman submarines§! count.\n     - §gGerman submarines count:§! [?GER.num_ships_with_type@submarine|0R] ([?ger_subs_count_x1_5|0R] - x1.5) \n     - §CEnglish screen ships count:§! [?ENG.num_ships_with_type@screen|0R]\n\n"
 ENG_prepare_for_blockade:0 "Prepare for Aerial Blockade"
 ENG_home_defence_measures:0 "Home Defence Measures"
 ENG_isle_protected:0 "Isle status: Protected!"
