added germany crete raid raid, first glance on paratroopers balance

--- a/localisation/english/ic_focus_l_english.yml
+++ b/localisation/english/ic_focus_l_english.yml
@@ -165,6 +165,9 @@ GER_silesian_industrial_region_2:0 "Second Industrial Heart of Germany"
 GER_rubber_3:0 "Rubber 3"
 GER_ss_regiments:0 "SS Regiments"
 ic_GER_army_innovation:0 "Army Innovation"
+ic_GER_fallschirmjager:0 "Test Fallschirmjäger on Crete"
+ic_GER_fallschirmjager_tt:0 "§GAvailable§! as §YGeneral§!: §HKurt Student§!"
+ic_GER_fallschirmjager_2:0 "Crete is Ours"
 GER_get_them_milzz:0 "Get them Milzz"
 GER_aa_defences_of_the_reich:0 "AA Defences of The Reich"
 GER_aa_defences_of_the_atlantikwall:0 "AA Defences of Atlantikwall"
