localization and gfx focus

--- a/localisation/english/ic_focus_l_english.yml
+++ b/localisation/english/ic_focus_l_english.yml
@@ -273,3 +273,11 @@ HUN_All_efforts_on_tanks:0 "All Effort on Tanks"
 HUN_hungarian_oil:0 "Hungarian Oil?"
 HUN_From_a_drop_into_the_sea:0 "From a Drop into the Sea"
 HUN_Aluminium_for_Germany:0 "Aluminium for Germany"
+HUN_Hungarian_military_industry:0 "Hungarian military industry"
+HUN_Budapest_is_center_of_Balkans:0 "Budapest is center Balkans"
+HUN_Hungarian_mentality:0 "Hungarian mentality"
+HUN_Increase_sales_resources_for_Germany:0 "Increase sales resources for Germany"
+HUN_Total_war:0 "Total war"
+HUN_Hungraian_SS:0 "Hungraian SS"
+HUN_Listen_to_Goebbels_speeches:0 "Listen to Goebbels speeches"
+HUN_Would_that_be_enough:0 "Would that be enough"
