focus hun (почти доделал нах)

--- a/localisation/english/ic_focus_l_english.yml
+++ b/localisation/english/ic_focus_l_english.yml
@@ -230,7 +230,7 @@ HUN_Invite_foreign_investors:0 "Invite Foreign Investors"
 HUN_From_our_depths:0 "From Our Depths"
 HUN_Establish_new_university:0 "Establish New Univesity"
 HUN_German_technology:0 "German Technology"
-HUN_Strenghten_fascists:0 "Strenghten_Fascists"
+HUN_Strenghten_fascists:0 "Strenghten Fascists"
 HUN_Italian_engineers:0 "Italian Engineers"
 HUN_Japanese_innovativennes:0 "Japanese Innovativennes"
 HUN_Domestic_arms_industry:0 "Domestic Arms Industry"
