почти доделал нах нах

--- a/localisation/english/ic_characters_l_english.yml
+++ b/localisation/english/ic_characters_l_english.yml
@@ -61,3 +61,8 @@ ic_USA_alexander_vandegrift:0 "Alexander Vandegrift"
 ic_USA_harold_rainsford_stark:0 "Harold Rainsford Stark"
 ic_USA_arleigh_burke:0 "Arleigh Burke"
 ic_USA_charles_m_cooke_jr:0 "Charles M. Cooke Jr."
+
+
+
+ic_ENG_Arthur_Tedder:0 "Arthur William Tedder"
+ic_ENG_Betram_Home_Ramsay:0 "Betram Home Ramsay"
