SOV GFX and localization; Moved +10% airdef to mid-war; Removed unnecessary debuffs for SOV air-idea.

--- a/localisation/english/ic_focus_l_english.yml
+++ b/localisation/english/ic_focus_l_english.yml
@@ -109,9 +109,44 @@ SOV_novikov_desc:0 ""
 SOV_VOV:0 "Great Patriotic War"
 SOV_VOV_desc:0 ""
 
-SOV_further_back_defence_of_stalingrad_tt:0 "§RGerman offencive on Stalingrad is over§!."
+SOV_bombing_of_berlin:0 "Bomb Nazi Liar!"
+SOV_bombing_of_berlin_desc:0 ""
+SOV_snyatie_debaffov_1:0 "Prevent unorganized Retreat"
+SOV_snyatie_debaffov_1_desc:0 ""
+SOV_oust_nazi:0 "Oust Nazis!"
+SOV_oust_nazi_desc:0 ""
+
+SOV_further_back_defence_of_moscow:0 "Further Back Defence of Moscow"
 SOV_further_back_defence_of_moscow_tt:0 "§RGerman offencive on Moscow is over§!."
+SOV_further_back_defence_of_moscow_desc:0 ""
+SOV_moscow_our:0 "Moscow Stands"
+SOV_moscow_our_desc:0 ""
+SOV_further_back_defence_of_stalingrad:0 "Further Back Defence of Stalingrad"
+SOV_further_back_defence_of_stalingrad_tt:0 "§RGerman offencive on Stalingrad is over§!."
+SOV_further_back_defence_of_stalingrad_desc:0 ""
+SOV_stalingrad_our:0 "Stalingrad Stands"
+SOV_stalingrad_our_desc:0 ""
 SOV_further_back_defence_tt:0 "If §Cyear is 1942§!, then: §YAfter 1:00, 1 Oct, 1942§!.\n   If §Cyear is 1943§!, then: §YAfter 1:00, 1 Oct, 1943§!."
+
+SOV_snyatie_debaffov_2:0 "After-shock Military Reorganization"
+SOV_snyatie_debaffov_2_desc:0 ""
+SOV_yacheika:0 "Better Means of War"
+SOV_yacheika_desc:0 ""
+SOV_skidka_na_tank:0 "Upgrade the Best Tank even more"
+SOV_skidka_na_tank_desc:0 ""
+SOV_dobicha_rezini:0 "Self-Reliant Rubber Facilities"
+SOV_dobicha_rezini_desc:0 ""
+SOV_skidka_na_samolet:0 "La-7"
+SOV_skidka_na_samolet_desc:0 ""
+SOV_ptab_focus:0 "PTAB The Tank Killer"
+SOV_ptab_focus_desc:0 ""
+SOV_goy_da_rokossovskii:0 "New Military Talents"
+SOV_goy_da_rokossovskii_desc:0 ""
+SOV_we_held_off:0 "1941 No More!"
+SOV_we_held_off_desc:0 ""
+SOV_kuban_air_battle:0 "Kuban Air Battle"
+SOV_kuban_air_battle_desc:0 ""
+
 
 
 GER_initial_focus:0 "Rhineland Remilitarization"
