GER BOP loc and gfx fix

--- a/localisation/english/ic_bop_l_english.yml
+++ b/localisation/english/ic_bop_l_english.yml
@@ -3,21 +3,21 @@
 GER_balance_of_powers:0 "War exhaustion"
 GER_bad_side:0 "War is going rly bad"
 GER_good_side:0 "People actually enjoy the war!"
-GER_first_debuff_range:0 "First Debuff"
-GER_second_debuff_range:0 "Second Debuff"
-GER_third_debuff_range:0 "Third Debuff"
-GER_fourth_debuff_range:0 "Fourth Debuff"
-GER_fifth_debuff_range:0 "Fifth Debuff"
-GER_sixth_debuff_range:0 "Sixth Debuff"
-GER_seventh_debuff_range:0 "Seventh Debuff"
-GER_eigth_debuff_range:0 "Eight Debuff"
-GER_nineth_debuff_range:0 "Nineth Debuff"
-GER_tenth_debuff_range:0 "Tenth Debuff"
-GER_eleventh_debuff_range:0 "Eleventh Debuff"
-GER_twelth_debuff_range:0 "Twelth Debuff"
-GER_thirteenth_debuff_range:0 "Thirteenth Debuff"
-GER_fourteenth_debuff_range:0 "Fourteenth Debuff"
+GER_first_debuff_range:0 "First Debuff (500k-800k casualties)"
+GER_second_debuff_range:0 "Second Debuff (800k-1kk casualties)"
+GER_third_debuff_range:0 "Third Debuff (1kk-1.5kk casualties)"
+GER_fourth_debuff_range:0 "Fourth Debuff (1.5kk-2kk casualties)"
+GER_fifth_debuff_range:0 "Fifth Debuff (2kk-2.5kk casualties)"
+GER_sixth_debuff_range:0 "Sixth Debuff (2.5kk-3kk casualties)"
+GER_seventh_debuff_range:0 "Seventh Debuff (3kk-3.5kk casualties)"
+GER_eigth_debuff_range:0 "Eight Debuff (3.5kk-4kk casualties)"
+GER_nineth_debuff_range:0 "Nineth Debuff (4kk-4.5kk casualties)"
+GER_tenth_debuff_range:0 "Tenth Debuff (4.5kk-5kk casualties)"
+GER_eleventh_debuff_range:0 "Eleventh Debuff (5kk-5.5kk casualties)"
+GER_twelth_debuff_range:0 "Twelth Debuff (5.5kk-6kk casualties)"
+GER_thirteenth_debuff_range:0 "Thirteenth Debuff (6kk-6.5kk casualties)"
+GER_fourteenth_debuff_range:0 "Fourteenth Debuff (>6.5kk casualties)"
 
-GER_first_buff_range:0 "Firth Buff"
-GER_second_buff_range:0 "Second Buff"
-GER_third_buff_range:0 "Third Buff"
+GER_first_buff_range:0 "Firth Buff (200k-500k casualties)"
+GER_second_buff_range:0 "Second Buff (100k-200k casualties)"
+GER_third_buff_range:0 "Third Buff (<100k casualties)"
