carrier base is done :thumbsup:

--- a/localisation/english/ic_ship_modules_l_english.yml
+++ b/localisation/english/ic_ship_modules_l_english.yml
@@ -1,3 +1,8 @@
 ﻿l_english:
  ic_ship_armor_dd:0 "Destroyer Armor"
  ic_dp_sub_secondaries_1:0 "Submarine Dual-Purpose Battery"
+
+ EQ_MOD_SLOT_deck_space_1_TITLE:0 "Deck Space 1"
+ EQ_MOD_SLOT_deck_space_2_TITLE:0 "Deck Space 2"
+ EQ_MOD_SLOT_deck_space_3_TITLE:0 "Deck Space 3"
+ EQ_MOD_SLOT_deck_space_4_TITLE:0 "Deck Space 4"
