--- a/localisation/english/ic_ship_modules_l_english.yml
+++ b/localisation/english/ic_ship_modules_l_english.yml
@@ -6,3 +6,8 @@
  EQ_MOD_SLOT_deck_space_2_TITLE:0 "Deck Space 2"
  EQ_MOD_SLOT_deck_space_3_TITLE:0 "Deck Space 3"
  EQ_MOD_SLOT_deck_space_4_TITLE:0 "Deck Space 4"
+ EQ_MOD_SLOT_ship_light_battery_slot_TITLE:0 "Light Battery"
+ EQ_MOD_SLOT_ship_light_battery_slot_2_TITLE:0 "Light Battery"
+ EQ_MOD_SLOT_ship_heavy_battery_slot_TITLE:0 "Heavy Battery"
+ EQ_MOD_SLOT_torpedo_slot_TITLE:0 "Torpedoes"
+ EQ_MOD_SLOT_torpedo_slot_2_TITLE:0 "Torpedoes"
