england somewhat done. navy aswell. starting to work on subs, dds, convoys and cvs

--- a/localisation/english/ic_focus_l_english.yml
+++ b/localisation/english/ic_focus_l_english.yml
@@ -236,9 +236,12 @@ ENG_birmingham_small_arms_company:0 "Birmingham Small Arms Company"
 ENG_reinforce_commonwealth:0 "Reinforce Commonwealth"
 ENG_raj:0 "Invest into Raj"
 ENG_australia:0 "Invest into Australia"
+ENG_new_zealand:0 "Invest into New Zealand"
 ENG_malaya_resources_base:0 "Malaya Resources Base"
 ENG_saf:0 "Invest into South Africa"
 ENG_canada:0 "Invest into Canada"
+ENG_canadian_tanks_corps:0 "Canadian Tank Corps"
+ic_ENG_canadian_tank_corps_tt:0 "Spawns 2 tank divisions of the latest equipment"
 ENG_shadow_scheme:0 "Shadow Scheme"
 ENG_sea_is_our_speciality:0 "Sea is our speciality"
 ENG_dockyards:0 "Naval expansion"
@@ -252,6 +255,7 @@ ENG_english_infantrymen:0 "English Infantrymen"
 ENG_fortification:0 "Empire Fortification"
 ENG_french_military_cooperation:0 "French Military Cooperation"
 ENG_general_command_staff:0 "General Command Staff"
+ENG_looks_like_we_need_tank:0 "Matilda Tank"
 ENG_reinforce_expeditionary_force:0 "Reinforce Expeditionary Force"
 ENG_research_slot_focus:0 "Research Slot"
 ENG_research_buff_focus:0 "Beat their "Wunderwaffe""
@@ -272,6 +276,7 @@ ENG_home_defence_measures:0 "Home Defence Measures"
 ENG_isle_protected:0 "Isle status: Protected!"
 ENG_rebuild_after_scavengers:0 "Rebuild after Scavengers!"
 ENG_our_turn_now:0 "Give as Good as One Gets"
+ENG_increase_aircraft_production:0 "Increase Aircraft Production"
 ic_ENG_motion_of_no_confidence:0 "Motion of No Confidence"
 
 
