--- a/localisation/english/ic_modifiers_l_english.yml
+++ b/localisation/english/ic_modifiers_l_english.yml
@@ -1,2 +1,3 @@
 ﻿l_english:
-  night_spotting_chance_factor_tt: "$MODIFIER_NIGHT_SPOTTING_CHANCE_FACTOR$: $RIGHT|+=%1$"
+  night_spotting_chance_factor_tt: "$MODIFIER_NIGHT_SPOTTING_CHANCE$: $RIGHT|+=%1$"
+  naval_night_attack_tt: "$MODIFIER_NAVAL_NIGHT_ATTACK$: $RIGHT|+=%1$"
