ещё чуть чуть насрал

--- a/localisation/english/ic_tooltips_l_english.yml
+++ b/localisation/english/ic_tooltips_l_english.yml
@@ -10,4 +10,6 @@
   ITA_csir_tt: "§YUnlocks§! §Gdecisions§! to form CSIR and take command over minors."
   ITA_unlock_defend_our_resourced_decision_tt: "§YUnlocks§! §Gdecisions§! to prepare our positions in Lybia."
   ITA_unlock_defend_egypt_tt: "§YUnlocks§! §Gdecisions§! to prepare our positions in Egypt."
- 
+  ITA_unlock_nationalization_tt: "§YUnlocks§! §Gdecisions§! to nationalise our industry."
+  ITA_nationalization_idea_tt: "This idea will be §Rdeleted§!, if all §Ydecisions§! were clicked."
+  
